conent-wrap height 100% to fix footer for movie grid and login form

--- a/popcornculture/src/components/organisms/LoginForm.css
+++ b/popcornculture/src/components/organisms/LoginForm.css
@@ -2,6 +2,7 @@
     padding-top: 50px;
     display: flex;
     flex-direction: column;
+    height: 100%;
     align-items: center;
     padding-bottom: 50px;
 }
